# fosk

./: .gitignore  AGENTS.md  Cargo.toml  README.md  license.txt
examples/full_demo/: Cargo.toml
examples/full_demo/mocks/collections/: audit_events.json  auth_tokens.json  blog_posts.json  cities.json  comments.json  companies.json  database.json  feature_flags.json  geo_regions.json  inventory_movements.json  order_items.json  orders.json  payments.json  people.json  products.json  sales_database.json  shipments.json  support_tickets.json  users.json  warehouses.json
examples/full_demo/mocks/schemas/: audit_events.json  auth_tokens.json  blog_posts.json  comments.json  database_schema.json  feature_flags.json  geo_regions.json  inventory_movements.json  payments.json  profiles.json  rest_resources.json  shipments.json  support_tickets.json  users.json  warehouses.json
examples/full_demo/src/: collection_crud.rs  complex_queries.rs  database_and_ids.rs  helpers.rs  load_save.rs  main.rs  metadata.rs  queries.rs  references.rs  sales_data.rs  schema_loading.rs
src/: lib.rs
src/database/: column_value.rs  config.rs  db.rs  db_collection.rs  db_config.rs  expansion_chain.rs  expansion_type.rs  id_manager.rs  id_type.rs  mod.rs
src/database/schema/: compact_schema.rs  field_info.rs  json_primitive.rs  mod.rs  reference_column.rs  schema_dict.rs  schema_file.rs  schema_load.rs
src/executer/: mod.rs  query_executer.rs  row.rs  row_cell.rs
src/executor/: _tests.rs  eval.rs  executor.rs  helpers.rs  mod.rs  plan_executor.rs  row.rs
src/parser/: mod.rs  parse_error.rs  parser_query.rs  phase.rs  query_comparers.rs  query_parser.rs  stm_token.rs  word_comparer.rs
src/parser/aggregators_helper/: accumulator.rs  aggregate_impl.rs  aggregate_registry.rs  mod.rs
src/parser/aggregators_helper/functions/: avg_impl.rs  count_impl.rs  minmax_impl.rs  mod.rs  sum_impl.rs
src/parser/analyzer/: analysis_context.rs  analyzed_identifier.rs  analyzed_query.rs  analyzer_error.rs  mod.rs  resolved_field.rs  type_inference.rs
src/parser/analyzer/resolvers/: aggregate_resolver.rs  column_key.rs  column_resolver.rs  (+8 more)
src/parser/ast/: args_parser.rs  collection.rs  collections_parser.rs  column.rs  comparer.rs  constraint_value.rs  criteria.rs  field.rs  field_type.rs  function.rs  group_by.rs  having_parser.rs  identifier.rs  join.rs  limit_offset_parser.rs  mod.rs  operators.rs  order_by.rs  predicate.rs  projection_parser.rs  query.rs  scalar_expr.rs  text_collector.rs  where_parser.rs
src/parser/tokens/: collection.rs  field.rs  join.rs  join_criteria.rs  mod.rs  operator.rs  projection.rs  projection_field.rs  query.rs
src/planner/: aggregate_call.rs  logical_plan.rs  mod.rs  plan_builder.rs
(+47 files in other folders)
