[package]
name = "fosk"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "io-util", "signal"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tracing = "0.1.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.1" , features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = "2.11.0"
once_cell = "1.21.3"

[dev-dependencies]
tempfile = "3.21.0"
