[package]
name = "fosk"
version = "0.1.12"
edition = "2024"
description = "In-memory SQL-like query engine and lightweight data store for testing and prototyping."
readme = "README.md"
repository = "https://github.com/lvendrame/fosk"
documentation = "https://docs.rs/fosk"
license = "MIT"
keywords = ["sql", "in-memory", "database", "query", "serde"]
categories = ["database", "parsing"]
exclude = [
    ".github/*",
    "images/*",
    "mocks/*",
    "scripts/*",
    ".editorconfig",
    ".gitignore",
    "Makefile",
    "README.md",
]

[dependencies]
regex = "1.11.2"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "io-util", "signal"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tracing = "0.1.41"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1" , features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
indexmap = "2.11.3"
once_cell = "1.21.3"
ordered-float = "5.0.0"

[dev-dependencies]
tempfile = "3.22.0"
