[package]
name = "fosk"
version = "0.1.14"
edition = "2024"
description = "In-memory SQL-like query engine and lightweight data store for testing and prototyping."
readme = "README.md"
repository = "https://github.com/lvendrame/fosk"
documentation = "https://docs.rs/fosk"
license = "MIT"
keywords = ["sql", "in-memory", "database", "query", "serde"]
categories = ["database", "parsing"]
exclude = [
    ".github/*",
    "images/*",
    "mocks/*",
    "scripts/*",
    ".editorconfig",
    ".gitignore",
    "Makefile",
    "README.md",
]

[dependencies]
regex = "1.12.3"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "fs", "io-util", "signal"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.2" , features = ["v4"] }
chrono = { version = "0.4.45", features = ["serde"] }
indexmap = "2.14.0"
once_cell = "1.21.4"
ordered-float = "5.3.0"

[dev-dependencies]
tempfile = "3.27.0"
